--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -150,58 +150,58 @@
                 <div id="smallestBreak"></div>    <div id="smallestBreak"></div>
                 The Metro College Student Success Program at San Francisco State University 
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/The Metro College Student Success Program at San Francisco State University-9.24.21.pdf">Reference Document</a>
+                <a href="./PDFS/The Metro College Student Success Program at San Francisco State University-9.24.21.pdf" target="_blank">Reference Document</a>
 
                 <br><br><br><br>
                 <span id= "highlighted-text">CLDE in Two-Year Institutions:</span>
                 <div id="smallestBreak"></div>    <div id="smallestBreak"></div>    <div id="smallestBreak"></div>
-                <a href="https://www.aacu.org/diversitydemocracy/2020/summer/probinson">College of the Canyons</a>
+                <a href="https://www.aacu.org/diversitydemocracy/2020/summer/probinson" target="_blank">College of the Canyons</a>
                 <br><br><div id="smallestBreak"></div>
                 Kingsborough Community College
                 <div id="smallestBreak"></div>
-                <a href="PDFS/Kingsborough Community College.pdf">Reference Document</a>
+                <a href="PDFS/Kingsborough Community College.pdf" target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Community Colleges for Democracy (Nine Case Studies)
                 <div id="smallestBreak"></div>
-                <a href="PDFS/Community-Colleges-for-Democracy-Aligning-Civic-and-Community-Engagement-with-Institutional-Priorities.pdf">Reference Document</a>
+                <a href="PDFS/Community-Colleges-for-Democracy-Aligning-Civic-and-Community-Engagement-with-Institutional-Priorities.pdf" target="_blank">Reference Document</a>
 
                 <br><br><br><br>
                 <span id= "highlighted-text">CLDE in Four-Year Institutions:</span>
                 <div id="smallestBreak"></div>    <div id="smallestBreak"></div>    <div id="smallestBreak"></div>
                 California State University Monterey Bay
                 <div id="smallestBreak"></div>
-                <a href="PDFS/California State University Monterey Bay.pdf">Reference Document</a>
+                <a href="PDFS/California State University Monterey Bay.pdf"target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 James Madison University
                 <div id="smallestBreak"></div>
-                <a href="PDFS/James Madison University -  Civic Learning for All Student.pdf">Reference Document</a>
+                <a href="PDFS/James Madison University -  Civic Learning for All Student.pdf" target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Portland State University
                 <div id="smallestBreak"></div>
-                <a href="PDFS/Portland State University.pdf">Reference Document</a>
+                <a href="PDFS/Portland State University.pdf" target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Providence College and St. Mary’s College of California
                 <div id="smallestBreak"></div>
-                <a href="PDFS/Providence College and St. Mary's College of California.pdf">Reference Document</a>
+                <a href="PDFS/Providence College and St. Mary's College of California.pdf" target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Southern Methodist University
                 <div id="smallestBreak"></div>
-                <a href="https://www.smu.edu/Provost/ProvostOffice/CIP/UndergraduateCurriculum/Common-Curriculum/GR">Reference</a>
+                <a href="https://www.smu.edu/Provost/ProvostOffice/CIP/UndergraduateCurriculum/Common-Curriculum/GR" target="_blank">Reference</a>
                 <br><br><div id="smallestBreak"></div>
                 University of Nebraska-Lincoln
                 <div id="smallestBreak"></div>
-                <a href="./PDFS/University of Nebraska-Lincoln.pdf">Reference</a>
+                <a href="./PDFS/University of Nebraska-Lincoln.pdf" target="_blank">Reference</a>
                 <br><br><div id="smallestBreak"></div>
                 University of Wisconsin—Oshkosh
                 <div id="smallestBreak"></div>
-                <a href="PDFS/University of Wisconsin--Oshkosh.pdf.pdf">Reference Document</a>
+                <a href="PDFS/University of Wisconsin--Oshkosh.pdf.pdf" target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Worcester Polytechnic University
                 <div id="smallestBreak"></div>
-                <a href="PDFS/Worcester Polytechnic Institute.pdf">Reference Document</a>
+                <a href="PDFS/Worcester Polytechnic Institute.pdf" target="_blank">Reference Document</a>
 
                 <br><br><br><br>
-                <span id= "highlighted-text">BTtoP Civic Engagement <a href="https://bttop.org/projects-of-the-bt2p-community/">Snapshots</a></span>
+                <span id= "highlighted-text">BTtoP Civic Engagement <a href="https://bttop.org/projects-of-the-bt2p-community/" target="_blank">Snapshots</a></span>
 
                 
         </div>
