--- a/cldebydesign.html
+++ b/cldebydesign.html
@@ -151,22 +151,22 @@
                 by the National Task Force for Civic Learning and Democratic Engagement following consultation with hundreds of campus leaders and major civic, 
                 scholarly, and national organizations. 
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Framework for College Students' Civic Learning and Democratic Engagement.pdf">Reference Document</a>
+                <a href="./PDFS/Framework for College Students' Civic Learning and Democratic Engagement.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">Civic Inquiry in General Education and Majors: A Guided Pathway Design:</span>&nbsp;This template shows how 
                 thematic course clusters can be keyed to important questions and to students’ own civic and career interests.
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Civic Inquiry in General Education and Majors -  A Guided Pathway Design.pdf">Reference Document</a>
+                <a href="./PDFS/Civic Inquiry in General Education and Majors -  A Guided Pathway Design.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">Civic Inquiry and Projects in the Major:</span>&nbsp;This prompt for curriculum mapping suggests 
                 ways that program content, learning outcomes, and students’ preparation for
                 work on civic problems and projects can be connected by design.                
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Civic Inquiry and Projects in the Major.pdf">Reference Document</a>
+                <a href="./PDFS/Civic Inquiry and Projects in the Major.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">Prioritizing Equity and Inclusion:</span>&nbsp;These articles suggest ways to 
                 reach students who too often are not included in civic learning: 
-                <a href="https://www.aacu.org/diversitydemocracy/2018/fall/yeh">first generation, low-income men</a>, and <a href="https://www.aacu.org/diversitydemocracy/2017/fall/roy">
+                <a href="https://www.aacu.org/diversitydemocracy/2018/fall/yeh" target="_blank">first generation, low-income men</a>, and <a href="https://www.aacu.org/diversitydemocracy/2017/fall/roy" target="_blank">
                 working adult learners.</a>
                 <br><br>
         </div>
