--- a/perspectives&issues.html
+++ b/perspectives&issues.html
@@ -146,16 +146,16 @@
                 This 2012 report helped accelerate the CLDE movement across higher education.  See chapters 5 and 6 for an overview of 
                 pedagogies and curriculum designs any institution can use.      
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/A Crucible Moment.  College Learning and Democracy's Future.pdf">Reference Document</a>
+                <a href="./PDFS/A Crucible Moment.  College Learning and Democracy's Future.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">Free and Civil Discourse: Challenges and Imperatives:
-                </span>&nbsp;This <a href="https://www.aacu.org/diversitydemocracy/2017/spring-summer">2017 issue of AAC&U’s archival quarterly,</a> 
+                </span>&nbsp;This <a href="https://www.aacu.org/diversitydemocracy/2017/spring-summer" target="_blank">2017 issue of AAC&U’s archival quarterly,</a> 
                 <i>Diversity & Democracy</i>, provides diverse 
                 perspectives and resources for fostering civil dialogue about contentious issues.
                 <br><br><br>
                 <span id= "highlighted-text">The Confounding Promise of Community - Why It Matters More than Ever for Student Success:
                 </span>&nbsp;CLDE recommends that civic learning be designed with equity, inclusion, and increased levels of student 
-                success the top priorities. This <a href="https://www.aacu.org/liberaleducation/2019/winter">2019 issue of AAC&U’s journal,</a> 
+                success the top priorities. This <a href="https://www.aacu.org/liberaleducation/2019/winter" target="_blank">2019 issue of AAC&U’s journal,</a> 
                 <i>Liberal Education</i>, explores these issues in depth.  See also the archival issues of AAC&U’s quarterly, 
                 Diversity & Democracy, for both examples and evidence of  equity-minded and public-spirited programs on campus. 
                 <br><br><br>
@@ -163,12 +163,12 @@
                 This ground-breaking 2020 Campus Compact publication shows how a diverse group of community colleges are making 
                 civic learning and engagement integral to their work. 
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Community-Colleges-for-Democracy-Aligning-Civic-and-Community-Engagement-with-Institutional-Priorities.pdf">Reference Document</a>
+                <a href="./PDFS/Community-Colleges-for-Democracy-Aligning-Civic-and-Community-Engagement-with-Institutional-Priorities.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">Achieving Equity: An Evaluation of a Multicomponent, Lower-Division Student Success Program</span>
                 that weaves social justice inquiry and action into its guided learning pathways for students.
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Achieving Equity - Mtro Academies.pdf">Reference Document</a>
+                <a href="./PDFS/Achieving Equity - Mtro Academies.pdf" target="_blank">Reference Document</a>
                 <br><br>
         </div>
     </div>
