--- a/planning.html
+++ b/planning.html
@@ -145,16 +145,16 @@
                 <span id= "highlighted-text">Assessing Your Institution’s Civic Strengths and Gaps:</span>&nbsp;This institutional self-study and 
                 planning matrix was initially published in <i>A Crucible Moment: College Learning for Democracy’s Future</i>, and has been updated for CLDE.
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Assessing Your Institution's Civic Strengths and Gaps .pdf">Reference Document</a>
+                <a href="./PDFS/Assessing Your Institution's Civic Strengths and Gaps .pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text">Civic Action Plan Development:</span>&nbsp;For its 30th Anniversary, Campus Compact developed a <a href="https://compact.org/cap/plan-development/">
+                <span id= "highlighted-text">Civic Action Plan Development:</span>&nbsp;For its 30th Anniversary, Campus Compact developed a <a href="https://compact.org/cap/plan-development/" target="_blank">
                 wealth of useful tools for campus planning and action</a>, including Knowledge Hubs linked to specific areas of campus action such as Building Interfaith 
                 Cooperation, Civic Engagement and Sustainability Education, and K-12/Higher Education Partnerships.
                 <br><br><br>
                 <span id= "highlighted-text">Civic Prompts: Making Civic Learning Routine Across the Disciplines:</span>&nbsp;<i>Civic Prompts</i> includes in Chapter 
                 IV a planning process developed with and for faculty members. 
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/Civic Prompts.pdf">Reference Document</a>
+                <a href="./PDFS/Civic Prompts.pdf" target="_blank">Reference Document</a>
                 <br><br>
         </div>
     </div>
