--- a/ourpartners.html
+++ b/ourpartners.html
@@ -161,11 +161,11 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Center for Education and the Workforce, Georgetown University</span> <br>Anthony Carnevale, Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Civic Nation</span> <br>Kyle Lierman, CEO
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Coalition of Urban and Metropolitan Universities</span> <br>Bobbie Laur, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Community College System of New Hampshire</span> <br>Mark Rubinstein, Chancellor
-        <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Civic Nation</span> <br>Kyle Lierman, CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Council for the Advancement of Standards in Higher Education (CAS)</span> <br>Doreen Murner, Executive Director
         <br><div id="smallBreak"></div>
@@ -174,8 +174,6 @@
         <span id="highlighted-text">ETS</span> <br>Walt MacDonald, President and CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Excelencia in Education</span> <br>Sarita Brown, President
-        <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Civic Nation</span> <br>Kyle Lierman, CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Higher Learning Commission</span> <br>Barbara Gellman-Danley, President
         <br><div id="smallBreak"></div>
@@ -251,7 +249,7 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Complete College America (CCA)</span> <br>Yolanda Watson Spiva, President
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">College Promise</span> <br>Martha Kanter, President and CEO
+            <span id="highlighted-text">College Promise</span> <br>Martha Kanter, CEO
             <br><br><br>
         </div>
         <div id="headerbox9">Research Partners</div>
