--- a/advisors.html
+++ b/advisors.html
@@ -138,7 +138,7 @@
     </div>
 
     <div id="pageContent2">
-        <div><span id="title">ABOUT &nbsp</span></div><br>
+        <!-- <div><span id="title">ABOUT &nbsp</span></div><br> -->
        <div id="headerbox7">CLDE Educational Advisors</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
