--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -139,7 +139,7 @@
     </div>
 
     <div id="pageContent2">
-        <div><span id="title">TAKE ACTION &nbsp</span></div>
+        <!-- <div><span id="title">TAKE ACTION &nbsp</span></div> -->
         <div id="textBox2">
             <br><br><br> 
                 <span id= "highlighted-text">There are many different ways to make students’ civic learning and democracy engagement (CLDE) 
