--- a/cldebydesign.html
+++ b/cldebydesign.html
@@ -140,7 +140,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">TAKE ACTION &nbsp</span></div>
+        <!-- <div><span id="title">TAKE ACTION &nbsp</span></div> -->
         <div id="textBox2">
             <br><br><br>
                 <span id= "highlighted-text">These tools and readings suggest ways of weaving CLDE into general education programs and 
