--- a/goals&priorities.html
+++ b/goals&priorities.html
@@ -139,7 +139,7 @@
     </div>
 
     <div id="pageContent2">
-        <div><span id="title">GOALS & PRIORITIES &nbsp</span></div><br>
+        <!-- <div><span id="title">GOALS & PRIORITIES &nbsp</span></div><br> -->
         <div id="headerbox4">Our Goals</div>
         <span id="bottomBorder"></span>
         <div id="textBox">
