--- a/leadership.html
+++ b/leadership.html
@@ -140,7 +140,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">ABOUT &nbsp</span></div><br>
+        <!-- <div><span id="title">ABOUT &nbsp</span></div><br> -->
        <div id="headerbox6">CLDE Leaders</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
