--- a/macroinitiatives.html
+++ b/macroinitiatives.html
@@ -139,7 +139,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">TAKE ACTION &nbsp</span></div>
+        <!-- <div><span id="title">TAKE ACTION &nbsp</span></div> -->
         <div id="textBox2">
             <br><br><br>
                 <span id= "highlighted-text"> The initiatives featured here each are working to take Civic Learning and 
