--- a/sharedcommitment.html
+++ b/sharedcommitment.html
@@ -140,7 +140,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">Shared Commitment Statement</span></div><br><br>
+        <!-- <div><span id="title">Shared Commitment Statement</span></div><br><br> -->
         <!-- <div id="headerbox2">Shared Commitment Statement</div>
         <span id="bottomBorder"></span> -->
         <div id="textBox">
