--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">ABOUT &nbsp</span></div><br>
+        <!-- <div><span id="title">ABOUT &nbsp</span></div><br> -->
        <div id="headerbox">CLDE Overview</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
