--- a/ourpartners.html
+++ b/ourpartners.html
@@ -139,7 +139,7 @@
 
 
     <div id="pageContent3">
-        <div><span id="title">PARTNERS &nbsp</span></div><br><br>
+        <!-- <div><span id="title">PARTNERS &nbsp</span></div><br><br> -->
        <div id="headerbox3">Shared Commitment Signatories and Partners</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
