--- a/planning.html
+++ b/planning.html
@@ -139,7 +139,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">TAKE ACTION &nbsp</span></div>
+        <!-- <div><span id="title">TAKE ACTION &nbsp</span></div> -->
         <div id="textBox2">
             <br><br><br> 
                 <span id= "highlighted-text">Assessing Your Institution’s Civic Strengths and Gaps:</span>&nbsp;This institutional self-study and 
