--- a/takeaction.html
+++ b/takeaction.html
@@ -139,7 +139,7 @@
 
 
     <div id="pageContent2">
-        <div><span id="title">TAKE ACTION &nbsp</span></div><br>
+        <!-- <div><span id="title">TAKE ACTION &nbsp</span></div><br> -->
        <div id="headerbox11">Our Resources</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
