--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
             <a id="spotlightText" href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank>
             Leading Organizations Mobilize to Include All College Students 
-            In Civic Leadering and Democracy Engagement (CLDE)</a>
+            In Civic Learning and Democracy Engagement (CLDE)</a>
             <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
             <span id="dateandsource">
             Cision PR Newswire
