--- a/ourpartners.html
+++ b/ourpartners.html
@@ -140,7 +140,7 @@
 
     <div id="pageContent3">
         <!-- <div><span id="title">PARTNERS &nbsp</span></div><br><br> -->
-       <div id="headerbox3">Shared Commitment Signatories <br> and Partners</div>
+       <div id="headerbox3">Shared Commitment Signatories and Partners</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
         <span id="highlighted-text">Achieving the Dream (AtD)</span> <br>Karen Stout, President and CEO
