--- a/ourpartners.html
+++ b/ourpartners.html
@@ -175,6 +175,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Excelencia in Education</span> <br>Sarita Brown, President
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Higher Learning Advocates</span> <br>Julie Peller, Executive Director
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Higher Learning Commission</span> <br>Barbara Gellman-Danley, President
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Hispanic Association of Colleges and Universities</span> <br>Antonio R. Flores, President and CEO
@@ -234,6 +236,8 @@
         <span id="highlighted-text">The Leadership Conference on Civil and Human Rights</span> <br> Wade Henderson, Interim President & CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">The Netter Center for Community Partnerships, University of Pennsylvania</span> <br>Ira Harkavy, Associate Vice President and Founding Director
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">University Innovation Alliance</span> <br>Bridget Burns, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">University System of Maryland</span> <br>Jay Perman, Chancellor
         <br><div id="smallBreak"></div>
