--- a/takeaction.html
+++ b/takeaction.html
@@ -146,10 +146,10 @@
            CLDE champions initiatives that involve all students in civic inquiry and democracy engagement, 
            with equity and inclusion our top priorities.
            <br><br>
-            The CLDE campus profiles you’ll find here either already reach all students, or have been specially 
+            The CLDE <a href="campusprofiles">Campus Profiles</a> you’ll find here either already reach all students, or have been specially 
             designed to help students from underserved communities succeed at higher levels.
             <br><br>
-            We also feature "macro" initiatives &#8211; led by national organizations, accreditors, and state systems - that 
+            We also feature <a href="macroinitiatives">"Macro" Initiatives</a> &#8211; led by national organizations, accreditors, and state systems - that 
             are working toward CLDE "at scale", meaning that all students will participate, benefit, and contribute.
             <br><br>
             If you are currently involved in a CLDE initiative that reaches or seeks to reach all
@@ -158,7 +158,8 @@
             profiles to this site as our movement grows.
             <br><br>
             If you are just getting started, or want to expand your existing civic learning program, we hope you 
-            will find the resources here both inspiring and practical.
+            will find the <a href="cldebydesign">CLDE By Design</a>, <a href="planning">Planning</a>, and <a href="perspectives&issues">Perspectives</a>
+            we've provided here both inspiring and practical.
         </div>
     </div>
     
