--- a/ourpartners.html
+++ b/ourpartners.html
@@ -242,7 +242,7 @@
         <span id="highlighted-text">University System of Maryland</span> <br>Jay Perman, Chancellor
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">WASC Senior College and University Commission</span> <br>Jamienne S. Studley, President
-        <br><br><br>   
+        <br>
         </div>
         <div id="headerbox3b">Founding Signatories</div>
         <span id="bottomBorder"></span>
@@ -254,7 +254,7 @@
             <span id="highlighted-text">Complete College America (CCA)</span> <br>Yolanda Watson Spiva, President
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">College Promise</span> <br>Martha Kanter, CEO
-            <br><br><br>
+            <br>
         </div>
         <div id="headerbox9">Research Partners</div>
         <span id="bottomBorder"></span>
@@ -265,7 +265,7 @@
             <span id="highlighted-text">National Survey of Student Engagement,</span> <br>Center for Postsecondary Research, Indiana University School of Education
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Faculty Survey of Student Engagement,</span> <br>Center for Postsecondary Research, Indiana University School of Education
-            <br><br><br>
+            <br>
         </div>
         <div id="headerbox10">K-12 Partners</div>
         <span id="bottomBorder"></span>
@@ -274,8 +274,15 @@
             </span> <br>Educating for American Democracy
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">CIRCLE, the Center for Information and Research on Civic Learning & Engagement,</span> <br>Tufts University, Jonathan M. Tisch College of Civic Life
-            <br><br>
+            <br>
         </div>
+        <div id="headerbox10">CLDE Supporters</div>
+        <span id="bottomBorder"></span>
+        <div id="textBox">
+            <span id="highlighted-text">American Association of State Colleges and Universities
+            </span> 
+        </div>
+        <br>
     </div>
 
     <footer id="footer">
