--- a/ourpartners.html
+++ b/ourpartners.html
@@ -161,6 +161,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Center for Education and the Workforce, Georgetown University</span> <br>Anthony Carnevale, Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Center for Engaged Learning, Teaching, and Scholarship, Loyola University Chicago</span> <br>Patrick M. Green, Executive Director
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Civic Nation</span> <br>Kyle Lierman, CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Coalition of Urban and Metropolitan Universities</span> <br>Bobbie Laur, Executive Director
