--- a/ourpartners.html
+++ b/ourpartners.html
@@ -217,6 +217,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">New England Commission on Higher Education (NECHE)</span> <br>Lawrence Schall, President
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Northwest Commission on Colleges and Universities</span> <br>Sonny Ramaswamy, President
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Project Pericles</span> <br>Jan R. Liss, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Prosperity Now</span> <br>Gary Cunningham, President and CEO
