--- a/index.html
+++ b/index.html
@@ -169,16 +169,33 @@
             <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
             <span id="dateandsource">
             Cision PR Newswire
-            <br>
-            Sep 28, 2021
+            </span>
+            <br><br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <a id="spotlightText" href="https://www.aacu.org/press/press-releases/aacu-announces-eighteen-institutions-selected-participate-new-project-advance" target = ”_blank>
+            18 Institutions Selected for CLDE-Affiliated Project to Study Students’ Gains from Community-Engaged Learning
+            </a>
+            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <span id="dateandsource">
+            Association of American Colleges & Universities                
+            </span>
+            <br><br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <a id="spotlightText" href="https://www.aacu.org/meetings/am22" target = ”_blank>
+            Educating for Democracy  will be focus for AAC&U Annual Meeting
+            </a>
+            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <span id="dateandsource">
+            January 19-21             
             </span>
         </div>
         <div id="PhotoBox">
             <a href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank">
                 <img id="spotlightImage" src="images/prnewswirelogo.jpg">
             </a>
+            <br>
+            <a href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank">
+                <img id="spotlightImage" src="images/aacu_0_0.jpg">
+            </a>
         </div>
-        
         </div>
     </div>
 
