--- a/ourpartners.html
+++ b/ourpartners.html
@@ -149,6 +149,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Anchor Institutions Task Force</span> <br>David J. Maurrasse, Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">American Association of Colleges for Teacher Education</span> <br>Lynn M. Gangone, President and CEO
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">American Political Science Association</span> <br>Steven R. Smith, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Asian & Pacific Islander American Scholarship Fund (APIA)</span> <br>Noel Harmon, President
