--- a/index.html
+++ b/index.html
@@ -160,17 +160,8 @@
     <div id="spotlightBox">
         <div id="horizontalLine"></div>
         <div id="spotlightInfoBox">
-            <span id="spotlightHeader"><a href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank>
-            SPOTLIGHT</a></span>
-            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
-            <a id="spotlightText" href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank>
-            Leading Organizations Mobilize to Include All College Students 
-            In Civic Learning and Democracy Engagement (CLDE)</a>
-            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
-            <span id="dateandsource">
-            Cision PR Newswire
-            </span>
-            <br><br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <span id="spotlightHeader">SPOTLIGHT</a></span>
+            <br><br>
             <a id="spotlightText" href="https://www.aacu.org/press/press-releases/aacu-announces-eighteen-institutions-selected-participate-new-project-advance" target = ”_blank>
             18 Institutions Selected for CLDE-Affiliated Project to Study Students’ Gains from Community-Engaged Learning
             </a>
@@ -186,11 +177,17 @@
             <span id="dateandsource">
             January 19-21             
             </span>
+            <br>
+            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <a id="spotlightText" href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank>
+             Leading Organizations Mobilize to Include All College Students 
+            In Civic Learning and Democracy Engagement (CLDE)</a>
+            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <span id="dateandsource">
+            Cision PR Newswire
+            </span>
         </div>
         <div id="PhotoBox">
-            <a href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank">
-                <img id="spotlightImage" src="images/prnewswirelogo.jpg">
-            </a>
             <br>
             <a href="https://www.prnewswire.com/news-releases/leading-higher-education-organizations-mobilize-to-include-all-college-students-in-civic-learning-and-democracy-engagement-clde-301386034.html?tc=eml_cleartime" target = ”_blank">
                 <img id="spotlightImage" src="images/aacu_0_0.jpg">
