--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -155,7 +155,9 @@
                 <br><br><br><br>
                 <span id= "highlighted-text">CLDE in Two-Year Institutions:</span>
                 <div id="smallestBreak"></div>    <div id="smallestBreak"></div>    <div id="smallestBreak"></div>
-                <a href="https://www.aacu.org/diversitydemocracy/2020/summer/probinson" target="_blank">College of the Canyons</a>
+                College of the Canyons</a>
+                <div id="smallestBreak"></div>
+                <a href="PDFS/Robinson.pdf" target="_blank">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Kingsborough Community College
                 <div id="smallestBreak"></div>
