--- a/cldebydesign.html
+++ b/cldebydesign.html
@@ -166,7 +166,7 @@
                 <br><br><br>
                 <span id= "highlighted-text">Prioritizing Equity and Inclusion:</span>&nbsp;These articles suggest ways to 
                 reach students who too often are not included in civic learning: 
-                <a href="https://www.aacu.org/diversitydemocracy/2018/fall/yeh" target="_blank">first generation, low-income men</a>, and <a href="https://www.aacu.org/diversitydemocracy/2017/fall/roy" target="_blank">
+                <a href="./PDFS/Yeh.pdf" target="_blank">first generation, low-income men</a>, and <a href="./PDFS/Roy.pdf" target="_blank">
                 working adult learners.</a>
                 <br><br>
         </div>
