--- a/macroinitiatives.html
+++ b/macroinitiatives.html
@@ -147,30 +147,39 @@
                     CLDE pervasive and inclusive. 
                 </span>
                 <br><br><br>
-                <span id= "highlighted-text"><a href="https://www.aacu.org/crucible/action-network" target="_blank"> The CLDE Action Network</a>
+                <!-- <span id= "highlighted-text"><a href="https://www.aacu.org/crucible/action-network" target="_blank"> The CLDE Action Network</a>
                 </span>&nbsp;This collaboration, formed in 2012, includes a dozen major organizations  that are leaders 
                 in advancing equity-minded civic learning endeavors across higher education. 
-                <br><br><br>
-                <span id= "highlighted-text"><a href="https://www.aacu.org/diversitydemocracy/2020/summer/rosen" target="_blank">The Higher Learning Commission</a>
+                <br><br><br> -->
+                <span id= "highlighted-text">Higher Learning Commission:</span>&nbsp;The Higher Learning Commission</a>
                 </span>&nbsp;The nation’s largest institutional accreditor with 967 members, HLC in 2020 made civic engagement one of its quality standards for 
                 the renewal of accreditation.
+                <br><div id="smallestBreak"></div>
+                <a href="./PDFS/Rosen.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text"><a href="https://www.aacu.org/diversitydemocracy/2020/summer/reiff" target="_blank">The Massachusetts Department of Education</a>
-                </span>&nbsp;In 2014, Massachusetts became the first state to make civic learning one of its expected college outcomes for public higher education.         
+                <span id= "highlighted-text">State of Massachusetts:</span>&nbsp;The Higher Learning Commission</a>
+                </span>&nbsp;The Massachusetts Department of Education</a></span>&nbsp;In 2014, Massachusetts became the first state to make civic learning one of its expected college outcomes for public higher education.   
+                <br><div id="smallestBreak"></div>
+                <a href="./PDFS/Reiff.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text"><a href="https://www.aacu.org/diversitydemocracy/2020/summer/fisler" target="_blank">State Council for Higher Education in Virginia (SCHEV)</a>
-                </span>&nbsp;In 2017, SCHEV asked all its member institutions to assess students’ civic engagement as a “required competency.”         
+                <span id= "highlighted-text">State of Virginia:</span>&nbsp;</a>
+                State Council for Higher Education in Virginia (SCHEV).</a>
+                </span>&nbsp;In 2017, SCHEV asked all its member institutions to assess students' civic engagement as a “required competency.”   
+                <br><div id="smallestBreak"></div>
+                <a href="./PDFS/Fisler.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text">State of Florida:</span>&nbsp;Since 2019, Governor Ron DeSantis, the state legislature, and the 
-                Department of Education have worked together to strengthen students’ civic learning in both K-12 and postsecondary public education, 
-                including career programs.      
+                <span id= "highlighted-text">State of Florida:</span>&nbsp;</a>
+                Since 2019, Governor Ron DeSantis, the state legislature, and the 
+                Department of Education have worked together to strengthen students' civic learning in both K-12 and postsecondary public education, 
+                including career programs.
                 <br><div id="smallestBreak"></div>
                 <a href="./PDFS/The State of Florida.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text"><a href="https://www.aacu.org/diversitydemocracy/2020/summer/shapiro" target="_blank">University System of Maryland</a>
-                </span>&nbsp; Since 2017, USMD has been working at the system and campus level to advance students’ civic engagement and learning.”       
-              
-                <br><br>
+                <span id= "highlighted-text">University System of Maryland:</span>&nbsp;
+               Since 2017, USMD has been working at the system and campus level to advance students' civic engagement and learning.” 
+                <br><div id="smallestBreak"></div>
+                <a href="./PDFS/Shapiro.pdf" target="_blank">Reference Document</a>
+                <br><br>       
         </div>
     </div>
 
