--- a/perspectives&issues.html
+++ b/perspectives&issues.html
@@ -149,7 +149,7 @@
                 <a href="./PDFS/A Crucible Moment.  College Learning and Democracy's Future.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">Free and Civil Discourse: Challenges and Imperatives:
-                </span>&nbsp;This <a href="https://www.aacu.org/" target="_blank">2017 issue of AAC&U’s archival quarterly,</a> 
+                </span>&nbsp;This 2017 issue of AAC&U's archival quarterly,</a> 
                 <i>Diversity & Democracy</i>, provides diverse 
                 perspectives and resources for fostering civil dialogue about contentious issues.
                 <br><div id="smallestBreak"></div>
@@ -157,7 +157,7 @@
                 <br><br><br>
                 <span id= "highlighted-text">The Confounding Promise of Community - Why It Matters More than Ever for Student Success:
                 </span>&nbsp;CLDE recommends that civic learning be designed with equity, inclusion, and increased levels of student 
-                success the top priorities. This <a href="https://www.aacu.org/" target="_blank">2019 issue of AAC&U’s journal,</a> 
+                success the top priorities. This 2019 issue of AAC&U’s journal,</a> 
                 <i>Liberal Education</i>, explores these issues in depth.  See also the archival issues of AAC&U’s quarterly, 
                 Diversity & Democracy, for both examples and evidence of  equity-minded and public-spirited programs on campus. 
                 <br><div id="smallestBreak"></div>
