--- a/advisors.html
+++ b/advisors.html
@@ -155,7 +155,7 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">David Scobey</span><br>Director of Bringing Theory to Practice (BTtoP)
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Carol Geary Schneider</span><br>President Emerita, Association of American Colleges and Universities,
+            <span id="highlighted-text">Carol Geary Schneider</span><br>President Emerita, American Association of Colleges and Universities,
             Senior Advisor for Quality and Civic Learning, College Promise; Consultant for Quality and Equity, Lumina Foundation
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Dawn Whitehead</span><br> Vice President, Global Citizenship for Campus, Community and Careers,
