--- a/leadership.html
+++ b/leadership.html
@@ -148,7 +148,7 @@
                 in postsecondary education an expectation for all students and to collaborate with K-12 civic and 
                 history learning reforms.</span>
             <br><br><br>
-            <span id="highlighted-text">Lynn Pasquerella</span>,<br>President, Association of American Colleges and Universities (AAC&U)
+            <span id="highlighted-text">Lynn Pasquerella</span>,<br>President, American Association of Colleges and Universities (AAC&U)
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Robert E. Anderson</span>,<br>President, State Higher Education Executive Officers (SHEEO)
             <br><div id="smallBreak"></div>
