--- a/macroinitiatives.html
+++ b/macroinitiatives.html
@@ -142,6 +142,12 @@
         <!-- <div><span id="title">TAKE ACTION &nbsp</span></div> -->
         <div id="textBox2">
             <br><br><br>
+             
+                <span id= "highlighted-text"> The Civic Learning and Democratic Engagement Action Network:  
+                    The <a href="organizations">organizations</a>  in this network have been long-time leaders 
+                    in advancing civic learning and/or democratic engagement as a national priority.
+                </span>
+                <br><br><br>
                 <span id= "highlighted-text"> The initiatives featured here each are working to take Civic Learning and 
                     Democracy Engagement “to scale.” Collectively, they show the spread of vigorous leadership to make 
                     CLDE pervasive and inclusive. 
@@ -151,14 +157,14 @@
                 </span>&nbsp;This collaboration, formed in 2012, includes a dozen major organizations  that are leaders 
                 in advancing equity-minded civic learning endeavors across higher education. 
                 <br><br><br> -->
-                <span id= "highlighted-text">Higher Learning Commission:</span>&nbsp;The Higher Learning Commission</a>
-                </span>&nbsp;The nation’s largest institutional accreditor with 967 members, HLC in 2020 made civic engagement one of its quality standards for 
+                <span id= "highlighted-text">Higher Learning Commission:</span>&nbsp;&nbsp;The Higher Learning Commission (HLC)</a>
+                </span>&nbsp;The nation's largest institutional accreditor with 967 members, HLC in 2020 made civic engagement one of its quality standards for 
                 the renewal of accreditation.
                 <br><div id="smallestBreak"></div>
                 <a href="./PDFS/Rosen.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text">State of Massachusetts:</span>&nbsp;The Higher Learning Commission</a>
-                </span>&nbsp;The Massachusetts Department of Education</a></span>&nbsp;In 2014, Massachusetts became the first state to make civic learning one of its expected college outcomes for public higher education.   
+                <span id= "highlighted-text">State of Massachusetts:</span></a>
+                </span>&nbsp;The Massachusetts Department of Education (MDE)</a></span>&nbsp;In 2014, Massachusetts became the first state to make civic learning one of its expected college outcomes for public higher education.   
                 <br><div id="smallestBreak"></div>
                 <a href="./PDFS/Reiff.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
@@ -175,8 +181,8 @@
                 <br><div id="smallestBreak"></div>
                 <a href="./PDFS/The State of Florida.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
-                <span id= "highlighted-text">University System of Maryland:</span>&nbsp;
-               Since 2017, USMD has been working at the system and campus level to advance students' civic engagement and learning.” 
+                <span id= "highlighted-text">State of Maryland:&nbsp;Univeristy System of Maryland (USMD)</span>
+               Since 2017, USMD has been working at the system and campus level to advance students' civic engagement and learning accross public higher education.” 
                 <br><div id="smallestBreak"></div>
                 <a href="./PDFS/Shapiro.pdf" target="_blank">Reference Document</a>
                 <br><br>       
