--- a/ourpartners.html
+++ b/ourpartners.html
@@ -253,7 +253,7 @@
         <div id="headerbox3b">Founding Signatories</div>
         <span id="bottomBorder"></span>
         <div id="textBox">
-            <span id="highlighted-text">Association of American Colleges and Universities (AAC&U)</span> <br>Lynn Pasquerella, President
+            <span id="highlighted-text">American Association of Colleges and Universities (AAC&U)</span> <br>Lynn Pasquerella, President
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">State Higher Education Executive Officers (SHEEO)</span> <br>Robert Anderson, President
             <br><div id="smallBreak"></div>
